Fix infinite loop. However scrollbars still need to be polished to improve their look (the step size probably). This is more important than the look, since it is blocking some applications (such as Amarok) under certain circumstances. I could reproduce the issue and I believe now is fixed. Please if you could recheck.

BUG: 213068

svn path=/trunk/KDE/kdelibs/; revision=1104321